text align fixed

--- a/client/src/View/Components/Button/Button.style.css
+++ b/client/src/View/Components/Button/Button.style.css
@@ -7,3 +7,9 @@
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border: none;
 }
+
+.Button:hover {
+    background: #fff;
+    color: #25619F;
+
+}
